more UI polishing and add font awesome

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,7 @@
 
 @import "./base/normalize"
+@import "font-awesome-sprockets"
+@import "font-awesome"
 
 @import "./application/variables"
 @import "./application/layout"
