--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -24,6 +24,7 @@ body
       font-weight: bold
       color: $white
       text-decoration: none
+      letter-spacing: 0.05em
   .top-nav
     box-sizing: border-box
     height: 70px
@@ -56,7 +57,13 @@ body
         bottom: 0
         width: 13%
         background-color: $grey
+        color: $white
+        text-align: center
+        line-height: 50px
         cursor: pointer
+        .fa
+          position: relative
+          top: -1px
 
 .nav
   position: absolute
@@ -70,7 +77,20 @@ body
   background-color: $dark-grey
   color: $soft-grey
   .item
-    padding: 14px 10px 14px 45px
+    display: block
+    padding: 14px
+    text-decoration: none
+    cursor: pointer
+    &:hover
+      color: $white
+    .fa
+      margin-right: 8px
+      width: 20px
+      text-align: center
+      &.fa-handshake-o
+        font-size: 14px
+        position: relative
+        top: -2px
 
 .content
   padding: 20px 20px 20px 200px
