--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,14 +15,26 @@
           .search-button
             .fa.fa-search.fa-lg
     .nav
-      %a.item
-        .fa.fa-handshake-o.fa-lg
-        Offers
-      %a.item
-        .fa.fa-street-view.fa-lg
-        Trade Requests
-      %a.item
-        .fa.fa-user-circle-o.fa-lg
-        Account
+      - if current_user
+        %a.item
+          .fa.fa-handshake-o.fa-lg
+          Offers
+        %a.item
+          .fa.fa-street-view.fa-lg
+          Trade Requests
+        %a.item
+          .fa.fa-user-circle-o.fa-lg
+          Account
+        = link_to destroy_user_session_path, method: 'DELETE', class: 'item' do
+          .fa.fa-sign-out.fa-lg
+          Logout
+      - else
+        = link_to new_user_session_path, class: 'item' do
+          .fa.fa-sign-in.fa-lg
+          Login
+        = link_to new_user_registration_path, class: 'item' do
+          .fa.fa-user-plus.fa-lg
+          Sign Up
+
     .content
       = yield
