styling the trade request list page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,7 +1,14 @@
 
 @import "./base/normalize"
+@import "./base/helpers"
 @import "font-awesome-sprockets"
 @import "font-awesome"
 
 @import "./application/variables"
 @import "./application/layout"
+
+@import "./application/modules/header"
+@import "./application/modules/nav"
+
+@import "./application/modules/buttons"
+@import "./application/modules/trade_requests"
