--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -8,91 +8,19 @@ body
   color: $dark-grey
   font-size: 14px
 
-.header
-  height: 70px
-  box-shadow: rgba(0,0,0,0.1) 0 2px 4px
-  .logo
-    height: 70px
-    width: 180px
-    float: left
-    background-color: $blue
-    text-align: center
-    line-height: 70px
-    a
-      font-size: 24px
-      font-weight: bold
-      color: $white
-      text-decoration: none
-      letter-spacing: 0.05em
-  .top-nav
-    box-sizing: border-box
-    height: 70px
-    padding: 10px 10px 10px 200px
-    background-color: $white
-    .search
-      position: relative
-      width: 460px
-      height: 50px
-      overflow: hidden
-      border-radius: 3px
-      input[name="query"]
-        box-sizing: border-box
-        position: absolute
-        top: 0
-        left: 0
-        right: auto
-        bottom: 0
-        width: 87%
-        height: 100%
-        background-color: $offwhite
-        padding: 0 15px
-        border: 0
-        outline: 0
-      .search-button
-        position: absolute
-        top: 0
-        left: auto
-        right: 0
-        bottom: 0
-        width: 13%
-        background-color: $grey
-        color: $white
-        text-align: center
-        line-height: 50px
-        cursor: pointer
-        .fa
-          position: relative
-          top: -1px
+a, .link
+  text-decoration: none
 
-.nav
-  position: absolute
-  top: 70px
-  left: 0
-  right: auto
-  bottom: 0
-  height: auto
-  width: 180px
-  padding: 20px 0
-  background-color: $dark-grey
-  .item
-    display: block
-    padding: 14px
-    color: $soft-grey
-    text-decoration: none
-    cursor: pointer
-    &:hover
-      color: $white
-    .fa
-      margin-right: 8px
-      width: 20px
-      text-align: center
-      &.fa-handshake-o
-        font-size: 14px
-        position: relative
-        top: -2px
+h1, h2, h3, h4, h5, h6
+  font-weight: normal
+  margin: 10px 0 20px
+
+h1
+  font-size: 24px
+
+hr
+  border: solid $light-grey 1px
+  border-size: 1px 0
 
 .content
-  padding: 20px 20px 20px 200px
-  h1
-    font-weight: normal
-    font-size: 24px
+  padding: 30px 30px 30px 210px
