--- a/app/assets/stylesheets/application/variables.sass
+++ b/app/assets/stylesheets/application/variables.sass
@@ -2,7 +2,7 @@ $blue: #28AAFA
 $dark-grey: #3C4650
 $grey: #647D8C
 $soft-grey: #B1B5B9
-$light-grey: #EFF1F3
+$light-grey: #E2E4E5
 $offwhite: #F7F8F9
 $white: #FFFFFF
 $danger-red: #D0021B
