another icon change

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
     .nav
       - if current_user
         %a.item
-          .fa.fa-bullseye.fa-lg
+          .fa.fa-usd.fa-lg
           Offers
         %a.item
           .fa.fa-street-view.fa-lg
