Trade requests belong to users

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -6,9 +6,11 @@
 
 @import "./application/variables"
 @import "./application/layout"
+@import "./application/typography"
 
 @import "./application/modules/header"
 @import "./application/modules/nav"
 
 @import "./application/modules/buttons"
+@import "./application/modules/forms"
 @import "./application/modules/trade_requests"
