--- a/app/assets/stylesheets/application/modules/buttons.sass
+++ b/app/assets/stylesheets/application/modules/buttons.sass
@@ -1,9 +1,12 @@
 button, .button
   box-sizing: border-box
-  display: block
+  display: inline-block
   padding: 12px 26px
   color: $white
   background-color: $soft-grey
   border-radius: 3px
+  border: none
+  cursor: pointer
+  -webkit-appearance: none
   &.primary
     background-color: $action-green
