dont automatically geolocate

--- a/app/assets/stylesheets/application/modules/header.sass
+++ b/app/assets/stylesheets/application/modules/header.sass
@@ -38,6 +38,16 @@
         padding: 0 15px
         border: 0
         outline: 0
+      .fa-crosshairs
+        position: absolute
+        right: 70px
+        top: 16px
+        width: 20px
+        height: 20px
+        line-height: 20px
+        text-align: center
+        color: $grey
+        cursor: pointer
       .search-button
         position: absolute
         top: 0
@@ -53,3 +63,5 @@
         .fa
           position: relative
           top: -1px
+        input
+          display: none
