--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,11 @@
       .logo
         = link_to 'DASHOUS', root_path
       .top-nav
-        .search
-          %input(type="text" name="query" placeholder="Search City, State or Country")
-          .search-button
+        %form.search(action="/" method="GET")
+          = text_field_tag :query, @query, placeholder: 'Search City, State or Country'
+          .fa.fa-crosshairs.fa-lg.js-geolocate(title="Use your current location")
+          %label.search-button
+            %input(type="submit" value="")
             .fa.fa-binoculars.fa-lg
     .nav
       - if current_user
