--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
           .fa.fa-crosshairs.fa-lg.js-geolocate(title="Use current location")
           %label.search-button
             %input(type="submit" value="")
-            .fa.fa-binoculars.fa-lg
+            .fa.fa-search.fa-lg
     .nav
       - if current_user
         %a.item
