responsive design and account page

--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -11,3 +11,16 @@ hr
 
 .content
   padding: 30px 30px 30px 210px
+
+@media (min-width: 721px)
+
+  .phone-only
+    display: none !important
+
+@media (max-width: 720px)
+
+  .content
+    padding: 30px 20px
+
+  .phone-hidden
+    display: none !important
