--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -1,6 +1,7 @@
 .table-list
   display: table
   width: 100%
+  padding-bottom: 30px
   .row
     display: table-row
     color: lighten($dark-grey,40%)
