--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,12 +3,26 @@
   %head
     %title Dashous
     = csrf_meta_tags
+    %meta{content: 'width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0', name: 'viewport'}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     .header
       .logo
         = link_to 'DASHOUS', root_path
+        .mobile-nav
+          - if current_user
+            = link_to offers_path, class: 'item' do
+              .fa.fa-usd.fa-lg
+            = link_to trade_requests_path, class: 'item' do
+              .fa.fa-street-view.fa-lg
+            = link_to account_index_path, class: 'item' do
+              .fa.fa-briefcase.fa-lg
+          - else
+            = link_to new_user_session_path, class: 'item' do
+              Login
+            = link_to new_user_registration_path, class: 'item' do
+              Signup
       .top-nav
         = form_tag('/', method: 'POST', class: 'search') do
           = text_field_tag :query, @query, placeholder: 'Search City, State or Country'
@@ -24,19 +38,16 @@
         = link_to trade_requests_path, class: 'item' do
           .fa.fa-street-view.fa-lg
           Trade Requests
-        %a.item
+        = link_to account_index_path, class: 'item' do
           .fa.fa-briefcase.fa-lg
           Account
-        = link_to destroy_user_session_path, method: 'DELETE', class: 'item' do
-          .fa.fa-bomb.fa-lg
-          Logout
       - else
         = link_to new_user_session_path, class: 'item' do
           .fa.fa-key.fa-lg
           Login
         = link_to new_user_registration_path, class: 'item' do
           .fa.fa-trophy.fa-lg
-          Sign Up
+          Signup
 
     .content
       - flash.each do |key, value|
