--- a/app/views/users/trade_requests/index.html.haml
+++ b/app/views/users/trade_requests/index.html.haml
@@ -1,4 +1,4 @@
-= link_to '+ Create New', new_trade_request_path, class: 'button primary right'
+= link_to '+ Create New', new_trade_request_path, class: 'button primary right phone-hidden'
 
 %h1 Trade Requests
 
@@ -15,3 +15,4 @@
           = link_to 'Edit', edit_trade_request_path(trade_request)
           = link_to 'Destroy', trade_request, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
+= link_to '+ Create New', new_trade_request_path, class: 'button primary phone-only'
