--- a/app/assets/stylesheets/application/modules/buttons.sass
+++ b/app/assets/stylesheets/application/modules/buttons.sass
@@ -1,4 +1,6 @@
-button, .button
+button,
+.button,
+input[type="submit"]
   box-sizing: border-box
   display: inline-block
   padding: 12px 26px
@@ -10,3 +12,6 @@ button, .button
   -webkit-appearance: none
   &.primary
     background-color: $action-green
+
+input[type="submit"]
+  background-color: $action-green
