display offers for trade requests

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
       - if current_user
         = link_to offers_path, class: 'item' do
           .fa.fa-usd.fa-lg
-          Offers
+          My Offers
         = link_to trade_requests_path, class: 'item' do
           .fa.fa-street-view.fa-lg
           Trade Requests
