--- a/app/views/users/trade_requests/index.html.haml
+++ b/app/views/users/trade_requests/index.html.haml
@@ -6,28 +6,7 @@
 
 .table-list
   - @trade_requests.each do |trade_request|
-    = link_to trade_requests_path(expand: trade_request.id), class: 'row' do
-      .name
-        = trade_request.name
-      .actions
-        .fa.fa-cog.fa-lg
-        .action-list
-          =# link_to 'Edit', edit_trade_request_path(trade_request)
-          =# link_to 'Destroy', trade_request, :method => :delete, :data => { :confirm => 'Are you sure?' }
-    - if @expand == trade_request.id
-      .row
-        .table-list
-          - trade_request.offers.each do |offer|
-            .row
-              .name
-                foo
-              .info
-                = offer.status
-              .actions
-                .fa.fa-cog.fa-lg
-                .action-list
-                  = link_to 'Decline', '#', :data => { :confirm => 'Are you sure?' }
-                  = link_to 'Approve', '#'
+    = render 'list_item', trade_request: trade_request, expanded: @expand == trade_request.id
 
 
 = link_to '+ Create New', new_trade_request_path, class: 'button primary phone-only'
