display offers with username

--- a/app/assets/stylesheets/application/typography.sass
+++ b/app/assets/stylesheets/application/typography.sass
@@ -9,6 +9,9 @@ body input
 
 a, .link
   text-decoration: none
+  color: $blue
+  &:hover
+    color: darken($blue, 30%)
 
 h1, h2, h3, h4, h5, h6
   font-weight: normal
