--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,700')
 
+html, body
+  height: 100%
+
 body
+  position: relative
   padding: 0
   margin: 0
   background-color: $offwhite
