--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -13,7 +13,7 @@
       padding: 20px 30px
       border-bottom: solid 1px $light-grey
     .actions
-      width: 200px
+      width: 140px
       text-align: right
       .fa-cog
         display: block
@@ -23,21 +23,21 @@
         cursor: pointer
       .action-list
         display: none
-    .name
-      &:before
-        display: block
-        position: absolute
-        top: 19px
-        left: 5px
-        content: '+'
-        font-size: 22px
+    &.expanded, &.collapsed
+      .name
+        &:before
+          display: block
+          position: absolute
+          font-size: 22px
+    &.collapsed
+      .name
+        &:before
+          top: 19px
+          left: 5px
+          content: '+'
     &.expanded
       .name
         &:before
           top: 17px
+          left: 6px
           content: '–'
-    &.static
-      .name
-        &:before
-          display: none
-
