--- a/app/views/users/trade_requests/edit.html.haml
+++ b/app/views/users/trade_requests/edit.html.haml
@@ -1,7 +1,4 @@
-%h1 Editing trade_request
+%h1 Edit Trade Request
 
 = render 'form'
 
-= link_to 'Show', @trade_request
-\|
-= link_to 'Back', trade_requests_path
