--- a/app/views/users/trade_requests/_list_item.html.haml
+++ b/app/views/users/trade_requests/_list_item.html.haml
@@ -12,6 +12,7 @@
     .fa.fa-cog.fa-lg{onclick: 'window.onClickActionToggle(this)'}
     .action-list
       = link_to 'Edit', edit_trade_request_path(trade_request)
+      = link_to 'View', public_trade_request_path(trade_request.id)
 - if expanded
   - trade_request.offers.each do |offer|
     .row
