more mobile styling for TR list

--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -87,3 +87,8 @@
         .name
           &:before
             top: 2px
+      .actions
+        .fa-cog
+          top: 7px
+        .action-list
+          top: 25px
