fix desktop TR list styles

--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -12,6 +12,7 @@
         color: $dark-grey
     .name, .info, .actions
       display: table-cell
+      position: relative
       padding: 20px 30px
       border-bottom: solid 1px $light-grey
     .actions
@@ -74,6 +75,7 @@
     .row
       border-bottom: solid 1px $light-grey
       .name, .info, .actions
+        position: static
         border-bottom: none
         padding: 5px 30px
         text-align: left
