handle long input without spaces

--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -13,8 +13,11 @@
     .name, .info, .actions
       display: table-cell
       position: relative
-      padding: 20px 30px
+      padding: 20px 10px
+      min-width: 60px
       border-bottom: solid 1px $light-grey
+    .name
+      padding-left: 30px
     .actions
       width: 140px
       text-align: right
