encrypt email addresses, use username to login

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,7 +8,7 @@
     = f.email_field :email, autofocus: true
 
   .field
-    = f.label :username, 'Username*'
+    = f.label :username, 'Username* (used to login)'
     = f.text_field :username
 
   .field
