--- a/app/views/users/trade_requests/_list_item.html.haml
+++ b/app/views/users/trade_requests/_list_item.html.haml
@@ -15,18 +15,21 @@
       = link_to 'View', public_trade_request_path(trade_request.id)
 - if expanded
   - trade_request.offers.each do |offer|
+    - offer = offer.decorate
     .row
       .name
         = link_to offer.user.username, public_user_profile_path(offer.user.username)
       .info
-        = offer.status.capitalize
+        = offer.status_for_user(current_user)
       .info
-        - if offer.approved?
-          = mail_to offer.user.email, 'Email'
       .actions
         - if offer.pending?
           = link_to 'Decline', trade_requests_offer_decline_path(offer.id), method: 'PATCH', data: { confirm: 'Are you sure?' }
           = link_to 'Approve', trade_requests_offer_approve_path(offer.id), method: 'PATCH'
-        - if offer.approved? and  not offer.reviewed_by?(current_user)
-          = link_to 'Positive', reviews_path(review: {offer_id: offer.id, tone: 'positive'}), method: 'POST'
-          = link_to 'Negative', reviews_path(review: {offer_id: offer.id, tone: 'negative'}), method: 'POST'
+        - if offer.approved?
+          = mail_to offer.user.email, 'Email'
+        - if offer.approved? and not offer.reviewed_by?(current_user)
+          %span.link{onclick: 'window.onClickActionToggle(this)'} Review
+          .action-list
+            = link_to 'Positive', reviews_path(review: {offer_id: offer.id, tone: 'positive'}), method: 'POST'
+            = link_to 'Negative', reviews_path(review: {offer_id: offer.id, tone: 'negative'}), method: 'POST'
