live exchange rate in the app

--- a/app/assets/stylesheets/application/modules/header.sass
+++ b/app/assets/stylesheets/application/modules/header.sass
@@ -67,6 +67,12 @@
           top: -1px
         input
           display: none
+  .price
+    position: absolute
+    top: 0
+    right: 0
+    line-height: 70px
+    padding: 0 20px
 
 @media (max-width: 720px)
   .header
@@ -106,4 +112,5 @@
           top: 5px
         .search-button .fa
           top: -11px
-
+    .price
+      display: none
