add map view to public trade request page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -14,3 +14,4 @@
 @import "./application/modules/buttons"
 @import "./application/modules/forms"
 @import "./application/modules/table-list"
+@import "./application/modules/map"
