--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,700')
 
 html, body
-  height: 100%
+  min-height: 100%
   word-break: break-word
 
 body
