further improve layout styling

--- a/app/assets/stylesheets/application/layout.sass
+++ b/app/assets/stylesheets/application/layout.sass
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:400,700')
 
-html, body
-  min-height: 100%
-  word-break: break-word
+html
+  height: 100%
+  overflow-y: scroll
 
 body
   position: relative
+  min-height: 100%
   padding: 0
   margin: 0
   background-color: $offwhite
+  word-break: break-word
 
 hr
   border: solid $light-grey 1px
