--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -2,5 +2,28 @@
 .field
   margin-bottom: 20px
 
-label
-  display: block
+  label
+    display: block
+    color: $grey
+    margin-bottom: 10px
+
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"],
+  input[type="tel"],
+  textarea
+    box-sizing: border-box
+    width: 400px
+    max-width: 100%
+    background-color: $light-grey
+    border: none
+    outline: none
+    appearance: none
+    line-height: 20px
+    padding: 15px
+
+  textarea
+    min-height: 150px
+    width: 500px
+    resize: vertical
