--- a/app/views/users/trade_requests/_form.html.haml
+++ b/app/views/users/trade_requests/_form.html.haml
@@ -8,21 +8,21 @@
 
   .field
     = f.label :name, 'Name'
-    = f.text_field :name
+    = f.text_field :name, placeholder: 'Best deal in Antarctica!'
   .field
-    = f.label :location, 'Location'
-    = f.text_field :location
+    = f.label :location, 'Location of Trade'
+    = f.text_area :location, placeholder: "The full address of a well-populated public place like a Cafe, Bank, or Police Station. \r\rWARNING - Never use your Home or Work as a Trade Location"
   .field
     = f.label :kind, 'Trade Type'
     %label
       = f.radio_button :kind, :buy
-      Buy
+      I am Buying Dash
     %label
       = f.radio_button :kind, :sell
-      Sell
+      I am Selling Dash
   .field
     = f.label :profit, 'Profit Margin'
-    = f.text_field :profit
+    = f.text_field :profit, placeholder: 'A number like "2" or "5.5"'
   .actions
     = f.submit 'Save', class: 'button primary'
     = link_to 'Cancel', trade_requests_path, class: 'button'
