improve inputs on iphone

--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -18,6 +18,7 @@
     max-width: 100%
     background-color: $light-grey
     border: none
+    border-radius: 0
     outline: none
     appearance: none
     line-height: 20px
