offerer can review trade requester, flash messages are styled

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -15,3 +15,4 @@
 @import "./application/modules/forms"
 @import "./application/modules/table-list"
 @import "./application/modules/map"
+@import "./application/modules/alert"
