--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -18,7 +18,7 @@
     max-width: 100%
     background-color: $light-grey
     border: none
-    border-radius: 0
+    border-radius: 3px
     outline: none
     appearance: none
     line-height: 20px
