--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -21,6 +21,9 @@
     .actions
       width: 140px
       text-align: right
+      & > a,
+      & > .link
+        margin-left: 10px
       .fa-cog
         display: block
         position: absolute
@@ -97,3 +100,7 @@
           top: 7px
         .action-list
           top: 25px
+        & > a,
+        & > .link
+          display: block
+          margin: 0 0 10px
