--- a/app/views/users/offers/index.html.haml
+++ b/app/views/users/offers/index.html.haml
@@ -6,13 +6,15 @@
   - @offers.each do |offer|
     .row
       .name
-        = offer.trade_request.name
+        = link_to offer.trade_request.name, public_trade_request_path(offer.trade_request.id)
       .info
-        = offer.status.capitalize
+        = offer.status_for_user(current_user)
       .actions
-        .fa.fa-cog.fa-lg{onclick: 'window.onClickActionToggle(this)'}
-        .action-list
-          = link_to 'View', public_trade_request_path(offer.trade_request.id)
-          - if offer.approved?
-            = mail_to offer.trade_request.user.email, 'Email'
+        - if offer.approved?
+          = mail_to offer.trade_request.user.email, 'Email'
+        - if offer.approved? and not offer.reviewed_by?(current_user)
+          %span.link{onclick: 'window.onClickActionToggle(this)'} Review
+          .action-list
+            = link_to 'Positive', reviews_path(review: {offer_id: offer.id, tone: 'positive'}), method: 'POST'
+            = link_to 'Negative', reviews_path(review: {offer_id: offer.id, tone: 'negative'}), method: 'POST'
 
