add profile info to TR page, fix bug

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -16,3 +16,4 @@
 @import "./application/modules/table-list"
 @import "./application/modules/map"
 @import "./application/modules/alert"
+@import "./application/modules/profile-tag"
