--- a/app/views/users/offers/index.html.haml
+++ b/app/views/users/offers/index.html.haml
@@ -4,14 +4,18 @@
 
 .table-list
   - @offers.each do |offer|
+    - trade_request = offer.trade_request
+    - user = trade_request.user
     .row
       .name
-        = link_to offer.trade_request.name, public_trade_request_path(offer.trade_request.id)
+        = link_to trade_request.name, public_trade_request_path(trade_request.id)
+      .info
+        = link_to user.username, public_user_profile_path(user.username)
       .info
         = offer.status_for_user(current_user)
       .actions
         - if offer.approved?
-          = mail_to offer.trade_request.user.email, 'Email'
+          = mail_to user.email, 'Email'
         - if offer.approved? and not offer.reviewed_by?(current_user)
           %span.link{onclick: 'window.onClickActionToggle(this)'} Review
           .action-list
